k8s/deployment-patient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: healthcareacrlingaiah.azurecr.io/patient-service:v1
        ports:
        - containerPort: 3000
        imagePullSecrets:
      - name: acr-credentials
